4th attempt (ENHANCED).  Fixed the gap between more button and the last content card, now it is performed with more-button's margin-top.

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,8 +107,6 @@ ol {
 }
 
 .result__video-container {
-  display: flex;
-  position: relative;
   width: 711px;
   height: 386px;
   margin-bottom: 20px;
@@ -292,9 +290,9 @@ ol {
 
 .more-button {
   width: 390px;
-  height: 34px;
+  min-height: 34px;
   padding-left: 10px;
-  margin-top: 30px;
+  margin-top: 25px;
 }
 
 .button:hover {
